# rusted-yadm

./: Cargo.toml  README.md
.github/workflows/: create-publish.yml  release.yml  rust-clippy.yml
src/: git.rs  handler.rs  main.rs  utils.rs
