[package]
name = "rusted-yadm"
version = "0.1.0"
authors = ["M1n-74316D65"]
edition = "2021"
description = "Rusted - Yet Another Dotfiles Manager"
readme = "README.md"
homepage = "https://github.com/M1n-74316D65/rusted-yadm"
repository = "https://github.com/M1n-74316D65/rusted-yadm"
license = "GPL-3.0"
keywords = ["dotfiles", "cli", "dotfiles_manager"]
categories = ["command-line-utilities", "command-line-interface"]

[dependencies]

openssl = "0.10"
git2 = "0.19"
clap = { version = "4.5", features = ["derive"] }
dirs = "5"
walkdir = "2"
